# HackKU2024

./: .env.example  README.md  package-lock.json  package.json  www.explorelawrence.xml
.github/workflows/: lint.yml
scraper/: .env.example  Dockerfile  README.md  pyproject.toml
scraper/src/: main.py
scraper/src/scrapers/: __init__.py  lawrenceks.py
src/app/: import xml.etree.py  layout.tsx  message.xml.txt  page.tsx  registry.tsx
src/app/community/[dynamic]/: page.tsx
src/lib/: db.ts
website/: .env.example  .eslintrc.js  package.json
website/.github/workflows/: lint.yml
website/scripts/: lint.sh
website/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  registry.tsx
website/src/app/api/auth/[...nextauth]/: route.ts
website/src/app/api/event/create/: route.ts
website/src/app/api/events/: route.ts
website/src/app/api/maps/city/: route.ts
website/src/app/map/: CategoryFilters.tsx  dark.ts  page.tsx
website/src/app/volunteer/: page.tsx
website/src/components/: AccountModal.tsx  Button.tsx  IconButton.tsx  Modal.tsx  Navbar.tsx  PageWrapper.tsx  SearchInput.tsx  Sidebar.tsx  UploadModal.tsx
website/src/lib/: auth.ts
website/src/types/: events.ts
