[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Cody Duong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = {extras = ["srv"], version = "^4.6.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
