[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Cody Duong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = {extras = ["srv"], version = "^4.6.3"}
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
